@@ -1323,7 +1323,7 @@ namespace elfutils
 	::Dwarf_CU *_m_cu;
 	ptrdiff_t _m_offset;
 
-	const_iterator (Dwarf_Attribute *, ptrdiff_t);
+	const_iterator (Dwarf_Attribute *, ptrdiff_t offset);
 
       public:
 	// Default constructor: only valid for operator=.
@@ -1496,8 +1496,9 @@ namespace elfutils
 
 	void advance ();
 
-	inline const_iterator (Dwarf_Attribute *attr, ptrdiff_t offset)
-	  : range_list::const_iterator (attr, offset), _m_block ()
+	// For end iterator.
+	inline explicit const_iterator (Dwarf_Attribute *attr)
+	  : dwarf::range_list::const_iterator (attr, 1), _m_block ()
 	{}
 
       public:
@@ -1548,7 +1549,7 @@ namespace elfutils
       const_iterator begin () const;
       inline const_iterator end () const
       {
-	return const_iterator (_m_attr.thisattr (), 1);
+	return const_iterator (_m_attr.thisattr ());
       }
 
       inline bool empty () const
